Squash and Merge  /fix/modal-height
Issue fix for medium-sized Modals with a .scrollable-list

--- a/src/sections/storage-full.scss
+++ b/src/sections/storage-full.scss
@@ -54,23 +54,34 @@
 }
 
 .container.storage-full {
-  .scrollable-list {
-    padding: 4px;
-    max-height: calc(100vh - 300px);
-    width: 100%;
-  }
+    .scrollable-list {
+        padding: 4px;
+        max-height: calc(100vh - 300px);
+        width: 100%;
+        @media (max-width: $screen-sm) {
+            max-height: calc(100vh - 330px);
+        }
+    }
 }
 
 .modal-body.storage-full {
-  .scrollable-list {
-    padding: 4px;
-    max-height: calc(100vh - 380px);
-    width: 100%;
-      @media (max-width: $screen-sm){ 
-        max-height: calc(100vh - 460px);
-        min-height: 210px;
-      }
-  }
+    .scrollable-list {
+        padding: 4px;
+        max-height: calc(100vh - 380px);
+        width: 100%;
+        @media (max-width: $screen-sm) {
+            max-height: calc(100vh - 460px);
+            min-height: 210px;
+        }
+    }
+}
+
+.storage-app .modal-body.storage-full {
+    .scrollable-list {
+        @media (max-width: $screen-sm) {
+            max-height: calc(100vh - 290px);
+        }
+    }
 }
 
 .file-empty-state path {
